💄 Added simple dark mode to prevent devs from losing sight

--- a/app/src/Components/Navbar/navbar.css
+++ b/app/src/Components/Navbar/navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     
     flex-basis: 100%;
-    background-color: rgb(136, 136, 136);
+    background-color: #102a43;
 
     padding: 0 5em;
 
