--- a/app/src/index.css
+++ b/app/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #121212;
+  color: #eee;
+}
+
+a {
+  color: #9fb3c8;
 }
 
 code {
